--- a/styles/brawlers-style.css
+++ b/styles/brawlers-style.css
@@ -58,7 +58,7 @@ main{
     gap: 10px;
     flex-direction: column;
     padding: 10px;
-    background: #f5e9e9;
+    background: #fff0f0;
     border-radius: 15px;
     width: 100%;
     height: 100%;
@@ -73,8 +73,17 @@ main{
     flex-direction: column;
     gap: 10px;
     text-align: center;
+    padding-top: 10px;
+    border-top: 2px solid black;
 }
-
+/*Modo oscuro card*/
+body.dark .card-content{
+    background: #0f0f0f;
+}
+body.dark .card-text{
+    border-top: 2px solid white;
+}
+/*Responsive*/
 @media (min-width: 600px) {
     .cards-container{
         grid-template-columns: 1fr 1fr;
