--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!--Styles-->
-    <link rel="stylesheet" href="styles/index-style.css">
-    <link rel="stylesheet" href="styles/main-styles.css">
+    <link rel="stylesheet" href="/styles/index-style.css">
+    <link rel="stylesheet" href="/styles/main-styles.css">
 </head>
 <body class="light">
     <header class="header">
