Ajustes de rutas

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imgs/logo.png" type="image/x-icon">
     <title>Brawl Stars</title>
-    <!--Fonts-->
+    <!--Fonts--> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -54,7 +54,7 @@
             <article class="brawlers-article">
                 <h2>Explora cada Brawler</h2>
                 <p>Conoce sus caracteristicas y habilidades para elegir el que se adapte más a tu estilo de juego. Son 79 brawlers en total.</p>
-                <a href="html/brawlers.html" class="button"><span class="button-content">Saber más</span></a>
+                <a href="/brawlers" class="button"><span class="button-content">Saber más</span></a>
             </article>
         </section>
         <section class="section-modos">
@@ -64,7 +64,7 @@
             <article class="modos-article">
                 <h2>Conoce los diversos modos de juego</h2>
                 <p>En brawl stars tenemos diferentes modos de juego para cada rol, desde enfrentamientos freneticos hasta combates estrategicos por la victoria.</p>
-                <a href="html/modos-juego.html" class="button"><span class="button-content">Saber más</span></a>
+                <a href="/modos-de-juego" class="button"><span class="button-content">Saber más</span></a>
             </article>
         </section>
         <section class="section-competitivo">
@@ -74,7 +74,7 @@
             <article class="competitivo-article">
                 <h2>Competitivo</h2>
                 <p>Conoce las rankeds y los torneos que se llevan acabo cada año para conocer a los mejores jugadores por su versatilidad y habilidad durante las batallas, y compite por las multiples recompensas por jugar</p>
-                <a href="html/competitivo.html" class="button"><span class="button-content">Saber más</span></a>
+                <a href="/competitivo" class="button"><span class="button-content">Saber más</span></a>
             </article>
         </section>
     </main>
