--- a/views/pages/brawlers.ejs
+++ b/views/pages/brawlers.ejs
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header id="nav-container">
-        <%- include('./fragments/nav.ejs') %>
+        <%- include('../fragments/nav.ejs') %>
     </header>
     <main>
         <section class="info-brawlers">
@@ -142,7 +142,7 @@
         </section>
     </main>
     <!--Footer-->
-    <%- include('./fragments/footer.ejs') %>
+    <%- include('../fragments/footer.ejs') %>
     <!--Icons-->
     <script src="https://unpkg.com/@phosphor-icons/web@2.1.1"></script>
     <!--JavaScript-->
